fix horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,13 @@
   scroll-behavior: smooth;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
+
 body {
+  position: relative;
   font-family: "Source Sans Pro", sans-serif;
 }
 
